<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:keepScreenOn="true" >

    <CheckBox
        android:id="@+id/checkForce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/force" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shutdown"
        android:onClick="onbtnShutdownClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchuser"
        android:onClick="onbtnSwitchUserClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoff"
        android:onClick="onbtnLogOffClick" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lock" android:onClick="onbtnLockClick"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart" android:onClick="onbtnRestartClick"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep" android:onClick="onbtnSleepClick"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hibernate" android:onClick="onbtnHibernateClick"/>

</LinearLayout>